# moe

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  experts.yaml  package.json  pyproject.toml
.impeccable/: hook.cache.json
experts/cardiology/: EXPERT.md
experts/cardiology/materials/: valves.md
experts/expert-builder/: EXPERT.md
experts/expert-builder/knowledge/: INDEX.md  build-workflow.md  quality-checklist.md  roster-schema-experts-yaml.md  sourcing-rules.md  supported-material-formats.md
experts/expert-builder/materials/: formats.md  quality.md  roster-schema.md  sourcing.md  workflow.md
experts/nutrition/: EXPERT.md
experts/nutrition/knowledge/: INDEX.md
experts/nutrition/materials/: heart_healthy_diet.md
experts/stoicism/: EXPERT.md
experts/stoicism/knowledge/: INDEX.md  meditations.md  the-enchiridion.md
plugin/: plugin.json
skill/moe/: SKILL.md
skill/moe/commands/: add-expert.md  build.md
src/moe/: __init__.py  __main__.py  api.py  cli.py  config.py  extract.py  knowledge.py  models.py  portability.py  render.py  roster.py  server.py  service.py
src/moe/clients/: __init__.py  bedrock.py  qdrant.py
src/moe/ingest/: __init__.py  chunk.py  contextual.py  extract.py  pipeline.py
src/moe/retrieval/: __init__.py  pipeline.py  rerank.py  router.py  search.py  synthesize.py
src/moe/store/: __init__.py  db.py  jobs.py
templates/: builder-behavior.md  expert-behavior.md
tests/: test_build.py  test_chunk.py  test_extract.py  test_registry.py  test_router.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css
web/src/components/: ui.tsx
web/src/pages/: Activity.tsx  ExpertDetail.tsx  Playground.tsx  Settings.tsx  Team.tsx
