[project]
name = "moe-mcp"
version = "0.1.0"
description = "Mixture-of-domain-experts MCP server: accuracy-first RAG over Qdrant Cloud + AWS Bedrock, with a management dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TechX" }]
keywords = ["mcp", "rag", "qdrant", "bedrock", "retrieval", "mixture-of-experts"]

dependencies = [
    # config / models
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # clients
    "boto3>=1.34",
    "qdrant-client>=1.12",
    "fastembed>=0.4",          # BM25 sparse vectors (no API needed)
    "tiktoken>=0.7",           # token-length chunking
    # ingestion / extraction
    "pymupdf>=1.24",           # PDF
    "ebooklib>=0.18",          # EPUB
    "trafilatura>=1.9",        # HTML main-content extraction
    "beautifulsoup4>=4.12",
    "markdown-it-py>=3.0",     # markdown structure
    # api / server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # mcp
    "mcp>=1.2",
    # cli
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
moe-mcp = "moe.server:main"
moe-ingest = "moe.cli:main"
moe-dashboard = "moe.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moe"]

# The built React SPA is emitted into src/moe/web_dist by `vite build`
# (see web/vite.config.ts) and shipped inside the wheel so `pip install`
# delivers the dashboard.
artifacts = ["src/moe/web_dist/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # typer/fastapi use function calls in defaults
