[project]
name = "moe"
version = "0.2.0"
description = "A distributable team of domain experts, shipped as agent skills (RAG-free). Author-time knowledge builder."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TechX" }]
keywords = ["agent-skills", "subagents", "claude-code", "codex", "pi", "mixture-of-experts"]

dependencies = [
    # config / models
    "pydantic>=2.7",
    "pyyaml>=6.0",
    # extraction (author-time knowledge build)
    "pymupdf>=1.24",           # PDF (+ OCR fallback)
    "ebooklib>=0.18",          # EPUB
    "trafilatura>=1.9",        # HTML main-content extraction
    "beautifulsoup4>=4.12",
    # cli
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
# Authoring / dev path (Python): build, scaffold, list. Run via `uv run moe <cmd>`,
# `python -m moe <cmd>`, or after `pip install -e .` as `moe <cmd>`. The user/agent-facing
# installer is the Node `npx moe install` (see package.json) and needs no Python.
moe = "moe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # typer uses function calls in defaults
